app/main/default/objects/sf_tfs__Work_Item__c/sf_tfs__Work_Item__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Default_State__c</fullName>
        <label>Default State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Project__c</fullName>
        <label>Project</label>
        <referenceTo>sf_tfs__Project__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_tfs__Statuses__c</fullName>
        <label>Statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__count__c</fullName>
        <label>count</label>
        <summaryFilterItems>
            <field>sf_tfs__Work_Item_Field__c.sf_tfs__isSynced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>sf_tfs__Work_Item_Field__c.sf_tfs__Work_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sf_tfs__fields__c</fullName>
        <label>fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_tfs__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_tfs__referenceName__c</fullName>
        <label>referenceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_tfs__xmlForm__c</fullName>
        <label>xmlForm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>sf_tfs__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>