app/main/default/objects/sf_tfs__Work_Item__c/fields/sf_tfs__count__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__count__c</fullName>
        <label>count</label>
        <summaryFilterItems>
            <field>sf_tfs__Work_Item_Field__c.sf_tfs__isSynced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>sf_tfs__Work_Item_Field__c.sf_tfs__Work_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>