app/main/default/objects/sf_tfs__Work_Item__c/fields/sf_tfs__is_Synced__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__is_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Synced</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>