app/main/default/objects/sf_tfs__Work_Item__c/fields/sf_tfs__isDisabled__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>