app/main/default/objects/sf_tfs__Work_Item__c/fields/sf_tfs__Project__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__Project__c</fullName>
        <label>Project</label>
        <referenceTo>sf_tfs__Project__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>