app/main/default/objects/sf_tfs__Work_Item__c/fields/sf_tfs__xmlForm__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>sf_tfs__xmlForm__c</fullName>
        <label>xmlForm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>